# kea-hal

./: Cargo.toml  LICENSE  README.md
examples/adc/: Cargo.toml
examples/adc/src/: main.rs
examples/blinky/: Cargo.toml
examples/blinky-clocks/: Cargo.toml
examples/blinky-clocks/src/: main.rs
examples/blinky/src/: main.rs
examples/spi/: Cargo.toml
examples/spi-talking-to-myself/: Cargo.toml  spi.asm
examples/spi-talking-to-myself/src/: main.rs
examples/spi/src/: main.rs
examples/system/: Cargo.toml  memory.x
examples/system/.cargo/: config
examples/system/src/: main.rs
src/: adc.rs  clocks.rs  gpio.rs  lib.rs  port.rs  prelude.rs  rcc.rs  spi.rs  system.rs
src/clocks/: ics.rs  osc.rs
src/system/: pmc.rs  sim.rs  watchdog.rs
