[package]
name = "blinky-clocks"
version = "0.1.0"
authors = ["W. Clayton Pannell <clayton.pannell@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "0.2.4"
nb = "1.0.0"
cortex-m = "0.7"
cortex-m-rt = "0.6.13"
panic-halt = "0.2.0"

[dependencies.kea-hal]
path = "../.."
version = "0.2.0"
features = ["rt"]
